RenderWidgetHostViewGuest was never wired to CursorManager.

The CL updates RWHVG to use CursorManager when updating its
cursor.

Bug: 775488
Change-Id: I5534aa04c78d27db2d22ccc4134c66fa1f9ea4af